rhai-1448 doc edits for Knowledge Tuning example

--- a/examples/knowledge-tuning/03_Knowledge_Generation/Knowledge_Generation.ipynb
+++ b/examples/knowledge-tuning/03_Knowledge_Generation/Knowledge_Generation.ipynb
@@ -28,7 +28,7 @@
     "## Prerequisites\n",
     "\n",
     "- Environment variables set up (see [.env.example](.env.example)). Specifically set the model provider\n",
-    "- Document pre-processing completed (run [Step 02/Data processing notebook](../02_Data_Processing/Data_Processing.ipynb) first)\n",
+    "- Document pre-processing completed (run [Module 02/Data processing notebook](../02_Data_Processing/Data_Processing.ipynb) first)\n",
     "\n",
     "**⚠️ If you haven't already, run the document processing notebook to create the seed data.**\n",
     "\n",
