rhai-1448 doc-updates to notebook text

--- a/examples/knowledge-tuning/03_Knowledge_Generation/Knowledge_Generation.ipynb
+++ b/examples/knowledge-tuning/03_Knowledge_Generation/Knowledge_Generation.ipynb
@@ -4,48 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enhanced Summary Knowledge Tuning - Data Generation\n",
+    "# Generate knowledge tuning data\n",
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook demonstrates how to generate high-quality knowledge tuning datasets using the SDG Hub framework. It creates multiple types of document augmentations and corresponding question-answer pairs that can be used to train or fine-tune language models for enhanced summarization and knowledge extraction capabilities.\n",
+    "This notebook demonstrates how you can generate high-quality knowledge tuning datasets using the Red Hat AI Synthetic Data Generation (SDG) Hub framework. It creates multiple types of document augmentations and corresponding question and answer (Q&A) pairs that you can use to train or fine-tune language models for enhanced summarization and knowledge extraction capabilities.\n",
     "\n",
-    "## What This Notebook Does\n",
+    "This notebook generates the following types of knowledge tuning datasets:\n",
+    "- **Extractive summaries**: Concise summaries that extract key information directly from source documents.\n",
+    "- **Detailed summaries**: Coprehensive summaries that provide thorough coverage of document content.\n",
+    "- **Key facts**: Structured fact extraction with corresponding Q&A pairs.\n",
+    "- **Document-based Q&A**: Question-answer pairs generated directly from document content.\n",
     "\n",
-    "This notebook will:\n",
-    "\n",
-    " **Generate Four Types of Knowledge Tuning Datasets**:\n",
-    "   - **Extractive Summaries**: Concise summaries that extract key information directly from source documents\n",
-    "   - **Detailed Summaries**: Comprehensive summaries that provide thorough coverage of document content\n",
-    "   - **Key Facts**: Structured fact extraction with corresponding Q&A pairs\n",
-    "   - **Document-Based Q&A**: Question-answer pairs generated directly from document content\n",
-    "\n",
-    "\n",
-    " **Output Structured Training Data**:\n",
-    "   - For each augmentation we save JSONL dataset.\n",
-    "   - You can follow [Knowledge mixing notebook](../04_Knowledge_Mixing/Knowledge_Mixing.ipynb) to convert it into training dataset\n",
+    "This notebook outputs structured training data. For each augmentation, it saves a JSONL dataset. \n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "- Environment variables set up (see [.env.example](.env.example)). Specifically set the model provider\n",
-    "- Document pre-processing completed (run [Module 02/Data processing notebook](../02_Data_Processing/Data_Processing.ipynb) first)\n",
+    "- You completed the [Data preprocessing ](../03_Knowledge_Generation/Knowledge_Generation.ipynb) notebook.\n",
     "\n",
-    "**⚠️ If you haven't already, run the document processing notebook to create the seed data.**\n",
-    "\n",
-    "## Next Steps\n",
-    "\n",
-    "After running this notebook, use [knowledge_mixing](../04_Knowledge_Mixing/Knowledge_Mixing.ipynb) to combine and curate the generated datasets for final model training.\n"
+    "- The following environment variables are set in the [.env.example](./.env.example) file:\n",
+    "  - `TEACHER_MODEL_API_KEY` — The LLM API key.\n",
+    "  - `TEACHER_MODEL_BASE_URL` — The LLM HTTP endpoint.\n",
+    "  - `TEACHER_MODEL_NAME` — The model to call for data generation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install Dependencies\n",
+    "## Install dependencies\n",
     "\n",
-    "⚠️ **vllm** is an optional dependency for this notebook. It is required only when you are trying to serve your teacher model using it.\n",
+    "⚠️ NOTE: If you use vllm to serve your teacher model, edit the following Python command to include the vllm option:\n",
     "\n",
-    "Please use `pip install -qqU .[vllm]` to install the package from the optional dependecies mentioned."
+    "`pip install -qqU .[vllm]`"
    ]
   },
   {
@@ -61,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup Paths and Directories"
+    "## Set up paths and directories"
    ]
   },
   {
@@ -103,13 +94,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Teacher Model Configuration\n",
+    "## Configure the teacher model\n",
     "\n",
-    "You can bring in your own inference server for the teacher model.\n",
+    "You can use your own inference server for the teacher model. You can also host your own teacher model by using `vllm` in a seperate terminal and then use the available GPUs.\n",
     "\n",
-    "You can also host your own teacher model using `vllm` in a seperate terminal and make use of the available GPUs.\n",
-    "\n",
-    "🚨 The below is an example command to run inference server using vllm. Refer vllm documentation to configure parameters to your needs.\n",
+    "🚨 The following example command runs the inference server by using vllm. Refer to the https://docs.redhat.com/en/documentation/red_hat_ai_inference_server(vllm documentation) for information about configuring parameters.\n",
     "\n",
     "\n",
     "```bash\n",
@@ -122,7 +111,7 @@
     "    --max-model-len=128000 \\\n",
     "```\n",
     "\n",
-    "View the supported teacher models for the sdg_hub flow by using `flow.get_model_recommendations()`"
+    "To view the supported teacher models for the SDG Hub flow, use the `flow.get_model_recommendations()` command."
    ]
   },
   {
@@ -144,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SDG Configuration"
+    "## Configure SDG"
    ]
   },
   {
@@ -200,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the seed data generated in step 2\n",
+    "# Load the seed data generated when you ran the Data Processing notebook\n",
     "quality_corpus = pd.read_json(SEED_DATA_FILE, lines=True)\n",
     "\n",
     "if SEED_DATA_SUBSAMPLE > 0:\n",
@@ -212,10 +201,11 @@
    "metadata": {},
    "source": [
     "## Run SDG\n",
-    "- This will create knowledge flow from provided yaml file\n",
-    "- We will run this on small dataset for demo purposes\n",
-    "- For large scale generation, please use the python command provided in the next cell\n",
-    "- You can analyze the generated data to ensure the quality is similar to proivded QnA pairs"
+    "\n",
+    "Run the following code to create a knowledge flow from the provided YAML file. For the purposes of this example, the dataset is small.\n",
+    "\n",
+    "For large scale generation, use the python command provided in the next cell.\n",
+    "You can analyze the generated data to check that the quality is similar to the provided Q&A pairs."
    ]
   },
   {
@@ -231,14 +221,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Auto-discover all available flows (no setup needed!)\n",
+    "# Auto-discover all available flows (no set up needed!)\n",
     "FlowRegistry.discover_flows()\n",
     "\n",
-    "# List available flows\n",
+    "# List the available flows\n",
     "flows = FlowRegistry.list_flows()\n",
     "print(f\"Available flows: {flows}\")\n",
     "\n",
-    "# You can also search the flows by tag\n",
+    "# Search the flows by tag\n",
     "qa_flows = FlowRegistry.search_flows(tag=\"question-generation\")\n",
     "print(f\"QA flows: {qa_flows}\")"
    ]
@@ -247,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate Extractive Summaries Dataset"
+    "### Generate the extractive summaries dataset"
    ]
   },
   {
@@ -297,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate Detailed Summary Dataset"
+    "### Generate the detailed summary dataset"
    ]
   },
   {
@@ -346,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate Key facts Dataset"
+    "### Generate the key facts dataset"
    ]
   },
   {
@@ -395,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate Document Based Dataset"
+    "### Generate the document-based dataset"
    ]
   },
   {
@@ -442,11 +432,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🎉 You now have all three four of document augmentations (detailed summaries, extractive summaries, key facts and document based) along with their corresponding QA pairs.\n",
+    "🎉 You now have all four of the document augmentations (detailed summaries, extractive summaries, key facts and document-based) along with their corresponding Q&A pairs.\n",
     "\n",
-    "✅ Next steps:\n",
-    "   - Combine and curate these datasets to prepare your final training data.\n",
-    "   - For detailed guidance on post-processing, mixing, and formatting the data for model training (including conversion to messages format), please refer to [knowledge_mixing.ipynb](../04_Knowledge_Mixing/Knowledge_Mixing.ipynb)."
+    "## Next step\n",
+    "  \n",
+    "   In the [Knowledge mixing notebook](../04_Knowledge_Mixing/Knowledge_Mixing.ipynb), you combine and curate these datasets to prepare your final training data."
    ]
   }
  ],
