--- a/examples/knowledge-tuning/05_Model_Training/Model_Training.ipynb
+++ b/examples/knowledge-tuning/05_Model_Training/Model_Training.ipynb
@@ -9,14 +9,15 @@
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook demonstrates how to fine-tune large language models (LLMs) using orthogonal subspace fine-tuning (OSFT) to add new capabilities without losing existing knowledge.\n",
-    "\n",
-    "Fine-tuning language models is hard—you need good data, lots of resources, and even small changes can cause problems. This makes it tough to add new abilities to a model. This problem is called **continual learning** and is what our new training technique, orthogonal subspace fine-tuning (OSFT), solves.\n",
-    "\n",
+    "This notebook demonstrates how to fine-tune large language models (LLMs) by using orthogonal subspace fine-tuning (OSFT) to add new capabilities without losing existing knowledge.\n",
     "\n",
     "## Prerequisites\n",
-    "- A GPU-enabled environment with sufficient resources for model training.\n",
-    "- Combined training datasets from the [Knowledge Mixing step](../04_Knowledge_Mixing/Knowledge_mixing.ipynb).\n"
+    "\n",
+    "- A GPU-enabled environment with sufficient resources for model training as described in [the Setup Readme file](../00_Setup/00_Setup_README).\n",
+    "\n",
+    "- You completed the [Knowledge Mixing step](../04_Knowledge_Mixing/Knowledge_mixing.ipynb) notebook.\n",
+    "\n",
+    "- You do not have `vllm` installed because it conflicts with the required `training_hub` package.\n"
    ]
   },
   {
@@ -24,13 +25,11 @@
    "id": "552bcb6d",
    "metadata": {},
    "source": [
-    "## Install Dependencies\n",
+    "## Install dependencies\n",
     "\n",
-    "Ensure the following after running the below code cell:\n",
-    "- Ensure you have `training_hub` installed with cuda support.\n",
-    "- Ensure you have the right `flash_attn` version for your CUDA setup.\n",
-    "\n",
-    "🚨 Ensure you dont have `vllm` installed, as this conflicts with `training_hub` package required for this step"
+    "Run the following code. It checks the following install dependencies:\n",
+    "- Check that `vllm` is **not** installed.\n",
+    "- Install the correct `flash_attn` version for your CUDA set up.\n"
    ]
   },
   {
@@ -67,7 +66,7 @@
    "id": "3e37928b",
    "metadata": {},
    "source": [
-    "## Setup Paths and Directories"
+    "## Set up paths and directories"
    ]
   },
   {
@@ -100,7 +99,7 @@
     "################################################################################\n",
     "BASE_MODEL_NAME = os.getenv(\"STUDENT_MODEL_NAME\", \"RedHatAI/Llama-3.1-8B-Instruct\")\n",
     "\n",
-    "# Path to the Training Dataset from Step 04\n",
+    "# Path to the Training Dataset from Module 04\n",
     "# Select the appropriate dataset with the cut size to use for training\n",
     "DATASET_PATH = KNOWLEDGE_MIXED_DATASET_PATH / \"combined_cut_5x.jsonl\"\n",
     "CHECKPOINTS_PATH = OUTPUT_DIR / \"checkpoint\"\n",
@@ -153,9 +152,9 @@
    "id": "c04e296c",
    "metadata": {},
    "source": [
-    "## Setup and Imports\n",
+    "## Import requirements\n",
     "\n",
-    "First, let's import and configure everything that we need to run this notebook."
+    "Import `training_hub` and required libraries:"
    ]
   },
   {
@@ -186,9 +185,9 @@
    "id": "a5842112",
    "metadata": {},
    "source": [
-    "## Logging Configuration\n",
+    "## Configure logging\n",
     "\n",
-    "Set up logging to track progress while preventing notebook crashes from excessive output.\n",
+    "Set up logging to track progress and to prevent notebook crashes caused by excessive output.\n",
     "<!-- \n",
     "**Note:** For production workflows or long-running jobs, we recommend using the script version at `scripts/osft-training.py` for better logging consistency and resumption capabilities.\n",
     "\n",
@@ -229,9 +228,9 @@
    "id": "84ae4b87",
    "metadata": {},
    "source": [
-    "## Utility Functions\n",
+    "## Utility functions\n",
     "\n",
-    "Let's define some helper functions for checkpoint management."
+    "Define helper functions for checkpoint management."
    ]
   },
   {
@@ -283,7 +282,7 @@
     "    )\n",
     "    FINAL_FINE_TUNED_MODEL_PATH.mkdir(\n",
     "        exist_ok=True, parents=True\n",
-    "    )  # Create the directory if not available\n",
+    "    )  # Create the directory if it does not exist\n",
     "\n",
     "    # Iterate through all files/folders in source and copy them\n",
     "    for item in os.listdir(source_directory):\n",
@@ -343,10 +342,9 @@
    "source": [
     "## Configuration\n",
     "\n",
-    "For this example, I will be running training on an 8xA100 box, but these hyperparameters can be adjusted for any machine; provided it is capable of running OSFT.\n",
+    "This example runs training on an 8xA100 box. You can adjust the hyperparameters for any machine that is capable of running OSFT.\n",
     "\n",
-    "\n",
-    "🚨 Ensure you have configured the number of GPUs available on the system"
+    "🚨 Ensure you have configured the number of GPUs available on the system."
    ]
   },
   {
@@ -354,12 +352,12 @@
    "id": "86595b72",
    "metadata": {},
    "source": [
-    "### Best Practices: Choosing Your Unfreeze Rank Ratio\n",
+    "### Best Practices: Choose an Unfreeze Rank Ratio\n",
     "\n",
-    "The `unfreeze_rank_ratio` is your key control for balancing learning vs. preservation. Here's how to choose the right value for your use case.\n",
+    "The `unfreeze_rank_ratio` is your key control for balancing learning verus preservation. Follow these guidelines to choose the value for your use case:\n",
     "\n",
-    "### Choosing the Right Unfreeze Rank Ratio\n",
-    "============================================================\n",
+    "**Guidelines for choosing an Unfreeze Rank Ratio**\n",
+    "==================================================\n",
     "\n",
     "1️⃣  **Small Behavior Tweaks**\n",
     "   When to use: Adjusting specific model behaviors without major changes\n",
@@ -400,8 +398,7 @@
     "- When in doubt, start smaller - you can always increase\n",
     "- Test preservation after each training phase\n",
     "\n",
-    "📊 **Quick Reference:**\n",
-    "\n",
+    "**Quick Reference:**\n",
     "\n",
     "| Use Case               | Recommended Ratio | Notes                    |\n",
     "|------------------------|-------------------|--------------------------|\n",
@@ -498,21 +495,15 @@
    "id": "ee601ca3",
    "metadata": {},
    "source": [
-    "## Fine-tuning the model using OSFT\n",
+    "## Fine-tuning the model by using OSFT\n",
     "\n",
-    "Since prompting the model doesn't work, our next step is modifying the model.\n",
-    "Normally, this wouldn't be a great solution since many methods can cause the model to forget important capabilities. \n",
-    "However; OSFT allows us to adjust the non-critical pieces of the model while keeping the crucial parts intact -- perfect for our use-case 😃.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8253b12",
-   "metadata": {},
-   "source": [
-    "## Training with OSFT\n",
+    "Because prompting the model does not work, the next step is to modify the model.\n",
     "\n",
-    "With our hyperparameters configured, now we launch a training job and sit back while it enhances our new model 😎🍿"
+    "Normally, this would not be a recommended solution because many methods can cause the model to forget important capabilities. \n",
+    "\n",
+    "However, with OSFT, you can adjust the non-critical pieces of the model while keeping the crucial parts intact -- a great solution for this example use-case 😃.\n",
+    "\n",
+    "Run the following code to launch a training job that enhances your model:\n"
    ]
   },
   {
@@ -596,13 +587,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e156372",
+   "metadata": {},
+   "source": [
+    "Model training has been completed successfully!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a181e93",
    "metadata": {},
    "source": [
-    "## Next Steps\n",
+    "## Next Step\n",
     "\n",
-    "Model training has been completed successfully!\n",
-    "You can now proceed to the [Evaluation](../06_Evaluation/Evaluation.ipynb) notebook to assess the performance of your fine-tuned model."
+    "Proceed to the [Evaluation](../06_Evaluation/Evaluation.ipynb) notebook to assess the performance of your fine-tuned model."
    ]
   }
  ],
