--- a/examples/knowledge-tuning/06_Evaluation/Evaluation.ipynb
+++ b/examples/knowledge-tuning/06_Evaluation/Evaluation.ipynb
@@ -9,18 +9,19 @@
     "\n",
     "\n",
     "## Overview\n",
-    "Evaluation is a crucial step in model training, allowing us to measure the performance and generalization ability of our models. In this notebook, we will systematically evaluate both the base model and the finetuned model using appropriate metrics and validation datasets.\n",
+    "Evaluation is a crucial step in model training. It allows you to measure the performance and generalization ability of our models. In this notebook, you use appropriate metrics and validation datasets to systematically evaluate both the base model and the fine-tuned model.\n",
     "\n",
     "- **Base Model Evaluation:**  \n",
-    "    We will assess the initial performance of the base model to establish a benchmark. This helps us understand how well the model performs before any task-specific adaptation.\n",
+    "    Assess the initial performance of the base model to establish a benchmark. This helps you understand how the model performs before any task-specific adaptation.\n",
     "\n",
     "- **Finetuned Model Evaluation:**  \n",
-    "    After training the model on our specific dataset, we will evaluate its performance again. Comparing these results with the base model will highlight the improvements gained through finetuning.\n",
+    "    After training the model on your specific dataset, evaluate its performance again. By comparing these results with the base model results, you can see the improvements provided by fine-tuning.\n",
     "\n",
-    "Throughout this notebook, we will use visualizations and quantitative metrics to provide a comprehensive analysis of model performance. This approach ensures transparency and helps guide further improvements.\n",
+    "To ensure transparency and to help guide further improvements, this notebook, uses visualizations and quantitative metrics to provide a comprehensive analysis of model performance. \n",
     "\n",
     "## Prerequisites\n",
-    "- Trained models from the [Model Training step](../05_Model_Training/Model_Training.ipynb).\n"
+    "\n",
+    "- You completed the [Model Training](../05_Model_Training/Model_Training.ipynb) notebook.\n"
    ]
   },
   {
@@ -28,7 +29,7 @@
    "id": "bb93a0ae",
    "metadata": {},
    "source": [
-    "## Install Dependencies"
+    "## Install dependencies"
    ]
   },
   {
@@ -46,7 +47,7 @@
    "id": "15c323ab",
    "metadata": {},
    "source": [
-    "## Setup Paths and Directories"
+    "## Set up paths and directories"
    ]
   },
   {
@@ -91,7 +92,7 @@
    "id": "16dc2db5",
    "metadata": {},
    "source": [
-    "## Load the Models"
+    "## Load the base model and the trained model"
    ]
   },
   {
@@ -125,9 +126,9 @@
    "id": "25f1d66b",
    "metadata": {},
    "source": [
-    "## LLM Sampling Parameters\n",
+    "## LLM sampling parameters\n",
     "\n",
-    "We will use the below when testing our model"
+    "Define parameter values for LLM sampling:"
    ]
   },
   {
@@ -162,7 +163,7 @@
    "id": "144e4629",
    "metadata": {},
    "source": [
-    "## Utility Functions"
+    "## Define utility functions"
    ]
   },
   {
@@ -235,9 +236,9 @@
    "id": "ee0d221b",
    "metadata": {},
    "source": [
-    "## Test 1\n",
+    "## Test the model\n",
     "\n",
-    "We will test the knowledge of the model on BMO data. \n",
+    "Use the following question to test the model's knowledge of Bank of Montreal (BMO) data:\n",
     "\n",
     "Question: `what is the meaning of verifying the identity of a person or an entity`"
    ]
@@ -253,6 +254,14 @@
     "\n",
     "\n",
     "run_experimentation(prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb240a58",
+   "metadata": {},
+   "source": [
+    "Congratulations! You have completed the Knowledge Tuning example."
    ]
   }
  ],
