rhai-1448 address SME review comments

--- a/examples/knowledge-tuning/02_Data_Processing/Data_Processing.ipynb
+++ b/examples/knowledge-tuning/02_Data_Processing/Data_Processing.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "- The URL of the source document.\n",
-    "- A snippet of the source document that is approximately 500 tokens in size. This snippet is used as the `icl_document` in the following code."
+    "- A snippet of the source document that is approximately 500 tokens in size. This snippet is used as the `icl_document` in the following code.\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "DOCLING_OUTPUT_DIR = OUTPUT_DIR / \"docling_output\"\n",
     "DOCLING_OUTPUT_DIR.mkdir(\n",
     "    parents=True, exist_ok=True\n",
-    ")  # Create docling output directory if it does not exist"
+    ")  # Create docling output directory if it does not exist\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "\n",
     "#### Source doument:\n",
     "- [BMO webpage](https://fintrac-canafe.canada.ca/guidance-directives/client-clientele/Guide11/11-eng)\n",
-    "- 🚨 [Terms and Conditions](https://www.canada.ca/en/transparency/terms.html)"
+    "- 🚨 [Terms and Conditions](https://www.canada.ca/en/transparency/terms.html)\n"
    ]
   },
   {
