--- a/examples/knowledge-tuning/03_Knowledge_Generation/Knowledge_Generation.ipynb
+++ b/examples/knowledge-tuning/03_Knowledge_Generation/Knowledge_Generation.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "    For information about configuring parameters, see the [vLLM CLI documentation](https://docs.vllm.ai/en/latest/cli/serve/#arguments).\n",
     "\n",
-    "**NOTE:** For this example, the teacher model is `openai/gpt-oss-120b`. To view all of the supported teacher models for the Red HAT SDG Hub flow, run the `flow.get_model_recommendations()` command in the terminal window.\n"
+    "**NOTE:** For this example, the teacher model is `openai/gpt-oss-120b`. To view all of the supported teacher models for the Red HAT SDG Hub flow, run the `flow.get_model_recommendations()` command, as described in the [Model Dsicovery section](https://ai-innovation.team/sdg_hub/#/flows/overview?id=model-discovery) of SDG Hub Flow System Overview documentation.\n"
    ]
   },
   {
