address comments in review
Signed-off-by: Brian Gallagher <briangal@gmail.com>

--- a/examples/fine-tuning/rhoai-3.2/training-hub/sft/sft.ipynb
+++ b/examples/fine-tuning/rhoai-3.2/training-hub/sft/sft.ipynb
@@ -30,7 +30,6 @@
    "outputs": [],
    "source": [
     "!python3 -m pip install datasets transformers accelerate bitsandbytes huggingface_hub\n",
-    "!python3 -m pip install --force-reinstall --no-cache-dir -U datasets\n",
     "!python3 -m pip install --force-reinstall --no-cache-dir -U \"kubeflow @ git+https://github.com/opendatahub-io/kubeflow-sdk.git@v0.2.1+rhai0\"\n",
     "!python3 -m pip install --force-reinstall --no-cache-dir -U training-hub==0.4.0\n",
     "!python3 -m pip install --force-reinstall --no-cache-dir -U ipykernel"
@@ -411,7 +410,7 @@
     "configuration = k8s.Configuration()\n",
     "configuration.host = api_server\n",
     "# Un-comment if your cluster API server uses a self-signed certificate or an un-trusted CA\n",
-    "configuration.verify_ssl = False\n",
+    "# configuration.verify_ssl = False\n",
     "configuration.api_key = {\"authorization\": f\"Bearer {token}\"}\n",
     "api_client = k8s.ApiClient(configuration)"
    ]
@@ -922,7 +921,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# client.delete_job(job_name)"
+    "client.delete_job(job_name)"
    ]
   },
   {
