--- a/examples/fine-tuning/rhoai-3.2/osft/osft-example.ipynb
+++ b/examples/fine-tuning/rhoai-3.2/osft/osft-example.ipynb
@@ -168,7 +168,7 @@
     "configuration = k8s.Configuration()\n",
     "configuration.host = api_server\n",
     "# Un-comment if your cluster API server uses a self-signed certificate or an un-trusted CA\n",
-    "configuration.verify_ssl = False\n",
+    "# configuration.verify_ssl = False\n",
     "configuration.api_key = {\"authorization\": f\"Bearer {token}\"}\n",
     "api_client = k8s.ApiClient(configuration)"
    ]
