Refactor progress tracking example notebook to enhance clarity and functionality
- Replace "Monitor Training Progress" section with "Follow Job Logs" for better context
- Stream job logs in real-time during training
- Add job status retrieval and detailed progress metrics display
- Improve error handling and namespace retrieval logic
- Clean up unnecessary imports and comments

--- a/examples/trainer/progress-tracking/progress-tracking-example.ipynb
+++ b/examples/trainer/progress-tracking/progress-tracking-example.ipynb
@@ -73,7 +73,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n",
     "\n",
     "import kubeflow\n",
     "import torch\n",
@@ -569,35 +568,9 @@
    "id": "35992cdb",
    "metadata": {},
    "source": [
-    "## Monitor Training Progress\n",
+    "## Follow Job Logs\n",
     "\n",
-    "With progress tracking enabled, you can monitor your training job in real-time. The `TransformersTrainer` automatically exposes metrics via an HTTP endpoint that the Kubeflow controller polls.\n",
-    "\n",
-    "### Viewing Progress\n",
-    "\n",
-    "There are two ways to monitor progress:\n",
-    "\n",
-    "1. **OpenShift AI Dashboard** - Navigate to your TrainJob in the UI to see real-time progress bars and metrics\n",
-    "2. **SDK (below)** - Use the `TrainerClient` to programmatically query job status and progress\n",
-    "\n",
-    "### Available Metrics\n",
-    "\n",
-    "| Metric | Description |\n",
-    "|--------|-------------|\n",
-    "| `progressPercentage` | Overall completion percentage (0-100) |\n",
-    "| `currentStep` / `totalSteps` | Training step progress |\n",
-    "| `currentEpoch` / `totalEpochs` | Epoch progress |\n",
-    "| `estimatedRemainingSeconds` | Estimated time to completion |\n",
-    "| `trainMetrics.loss` | Current training loss value |\n",
-    "| `trainMetrics.learning_rate` | Current learning rate |\n",
-    "\n",
-    "### How It Works\n",
-    "\n",
-    "1. Each training pod runs an HTTP server on port 28080\n",
-    "2. The server exposes metrics as JSON at the `/` endpoint\n",
-    "3. The Kubeflow controller polls this endpoint every 30 seconds (configurable)\n",
-    "4. Metrics are written to the TrainJob's status annotations\n",
-    "5. Dashboard and SDK read these annotations to display progress"
+    "Let's fetch our job logs to make sure training is going as expected. The logs will stream in real-time as the training progresses."
    ]
   },
   {
@@ -607,62 +580,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_progress(job):\n",
-    "    \"\"\"Format job progress for display.\"\"\"\n",
-    "    if not job:\n",
-    "        return \"Job not found\"\n",
+    "# Stream logs (press Ctrl+C to stop if you want to continue with other cells)\n",
+    "for logline in client.get_job_logs(job_name, follow=True):\n",
+    "    print(logline, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43dc2edb",
+   "metadata": {},
+   "source": [
+    "## Get Job Status\n",
     "\n",
-    "    status = job.get(\"status\", \"Unknown\")\n",
-    "    progress = job.get(\"progress\", {})\n",
+    "Check the final status of the training job after completion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "615411cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check job status\n",
+    "job = client.get_job(job_name)\n",
+    "print(\"Final TrainJob Status:\")\n",
+    "print(f\"   Name: {job.name}\")\n",
+    "print(f\"   Status: {job.status}\")\n",
+    "print(f\"   Created: {job.creation_timestamp}\")\n",
+    "print(f\"   Nodes: {job.num_nodes}\")\n",
+    "print(f\"   Runtime: {job.runtime.name}\")\n",
     "\n",
-    "    output = f\"Status: {status}\"\n",
+    "if job.steps:\n",
+    "    print(\"   Steps:\")\n",
+    "    for step in job.steps:\n",
+    "        print(f\"     - {step.name}: {step.status}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d132f69b",
+   "metadata": {},
+   "source": [
+    "## Check Training Progress\n",
     "\n",
-    "    if progress:\n",
-    "        pct = progress.get(\"progressPercentage\", 0)\n",
-    "        current_step = progress.get(\"currentStep\", 0)\n",
-    "        total_steps = progress.get(\"totalSteps\", 0)\n",
-    "        current_epoch = progress.get(\"currentEpoch\", 0)\n",
-    "        total_epochs = progress.get(\"totalEpochs\", 0)\n",
-    "        eta = progress.get(\"estimatedRemainingSeconds\", 0)\n",
+    "View detailed progress metrics from the TrainJob annotations. The Kubeflow controller polls the training pods every 30 seconds and writes metrics to these annotations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0cd240d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
     "\n",
-    "        output += f\" | Progress: {pct:.1f}%\"\n",
-    "        output += f\" | Steps: {current_step}/{total_steps}\"\n",
-    "        output += f\" | Epoch: {current_epoch}/{total_epochs}\"\n",
+    "from kubernetes import client as k8s\n",
     "\n",
-    "        if eta and eta > 0:\n",
-    "            mins, secs = divmod(int(eta), 60)\n",
-    "            output += f\" | ETA: {mins}m {secs}s\"\n",
+    "custom_api = k8s.CustomObjectsApi(api_client)\n",
     "\n",
-    "        metrics = progress.get(\"trainMetrics\", {})\n",
-    "        if metrics:\n",
-    "            loss = metrics.get(\"loss\", 0)\n",
-    "            if loss and loss > 0:\n",
-    "                output += f\" | Loss: {loss:.4f}\"\n",
+    "# Get current namespace\n",
+    "try:\n",
+    "    with open(\"/var/run/secrets/kubernetes.io/serviceaccount/namespace\") as f:\n",
+    "        job_namespace = f.read().strip()\n",
+    "except FileNotFoundError:\n",
+    "    # Fallback: use oc project -q\n",
+    "    import subprocess\n",
     "\n",
-    "    return output\n",
+    "    result = subprocess.run(\"oc project -q\", shell=True, capture_output=True, text=True)\n",
+    "    job_namespace = result.stdout.strip() if result.returncode == 0 else \"default\"\n",
     "\n",
-    "\n",
-    "print(\"📊 Monitoring training progress...\")\n",
-    "print(\"(Press Ctrl+C to stop monitoring)\\n\")\n",
+    "print(f\"📍 Namespace: {job_namespace}\")\n",
     "\n",
     "try:\n",
-    "    while True:\n",
-    "        jobs = client.list_jobs()\n",
-    "        job = next((j for j in jobs if j.get(\"name\") == job_name), None)\n",
+    "    trainjob = custom_api.get_namespaced_custom_object(\n",
+    "        group=\"trainer.kubeflow.org\",\n",
+    "        version=\"v1alpha1\",\n",
+    "        namespace=job_namespace,\n",
+    "        plural=\"trainjobs\",\n",
+    "        name=job_name,\n",
+    "    )\n",
     "\n",
-    "        if job:\n",
-    "            status = job.get(\"status\", \"\")\n",
-    "            print(f\"[{time.strftime('%H:%M:%S')}] {format_progress(job)}\")\n",
+    "    annotations = trainjob.get(\"metadata\", {}).get(\"annotations\", {})\n",
     "\n",
-    "            if status in [\"Succeeded\", \"Failed\", \"Error\"]:\n",
-    "                print(f\"\\n✅ Job finished with status: {status}\")\n",
-    "                break\n",
-    "        else:\n",
-    "            print(f\"[{time.strftime('%H:%M:%S')}] Waiting for job to start...\")\n",
+    "    print(f\"\\nTrainJob Progress for {job_name}:\\n\")\n",
     "\n",
-    "        time.sleep(10)\n",
-    "except KeyboardInterrupt:\n",
-    "    print(\"\\n⏹️ Monitoring stopped by user\")"
+    "    # Progression tracking config\n",
+    "    print(\"Config:\")\n",
+    "    print(\n",
+    "        f\"  tracking-enabled: {annotations.get('trainer.opendatahub.io/progression-tracking', 'N/A')}\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"  metrics-port: {annotations.get('trainer.opendatahub.io/metrics-port', 'N/A')}\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"  poll-interval: {annotations.get('trainer.opendatahub.io/metrics-poll-interval', 'N/A')}s\"\n",
+    "    )\n",
+    "\n",
+    "    # Progression metrics from trainerStatus annotation\n",
+    "    trainer_status = annotations.get(\"trainer.opendatahub.io/trainerStatus\")\n",
+    "    if trainer_status:\n",
+    "        progress = json.loads(trainer_status)\n",
+    "        print(\"\\nMetrics:\")\n",
+    "        print(f\"  progress: {progress.get('progressPercentage', 'N/A')}%\")\n",
+    "        print(\n",
+    "            f\"  step: {progress.get('currentStep', 'N/A')}/{progress.get('totalSteps', 'N/A')}\"\n",
+    "        )\n",
+    "        print(\n",
+    "            f\"  epoch: {progress.get('currentEpoch', 'N/A')}/{progress.get('totalEpochs', 'N/A')}\"\n",
+    "        )\n",
+    "        print(f\"  remaining: {progress.get('estimatedRemainingSeconds', 'N/A')}s\")\n",
+    "\n",
+    "        train_metrics = progress.get(\"trainMetrics\", {})\n",
+    "        if train_metrics:\n",
+    "            print(f\"  loss: {train_metrics.get('loss', 'N/A')}\")\n",
+    "            print(f\"  learning_rate: {train_metrics.get('learning_rate', 'N/A')}\")\n",
+    "\n",
+    "    print(f\"\\nAll annotations:\\n{json.dumps(annotations, indent=2)}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")"
    ]
   },
   {
@@ -762,6 +801,10 @@
     "print(\"\\n🤖 Model response:\")\n",
     "\n",
     "inputs = trained_tokenizer(test_prompt, return_tensors=\"pt\").to(trained_model.device)\n",
+    "\n",
+    "# Remove token_type_ids if present (not used by some models like Qwen)\n",
+    "if \"token_type_ids\" in inputs:\n",
+    "    del inputs[\"token_type_ids\"]\n",
     "\n",
     "with torch.no_grad():\n",
     "    outputs = trained_model.generate(\n",
